...
        self.user = user
    }
    
    var body: some View {
        Form {
            Section(header: Text("Login Info")) {
                TextField("Username", text: $user.username)
                    .autocapitalization(.none)
                    .disableAutocorrection(true)
                if user.usernameError != "" {
                    Text(user.usernameError)
                        .foregroundColor(.red)
                        .italic()
                }
                if !user.userRegistered {
                    SecureField("Password", text: $user.password)
                    if user.passwordError != "" {
                        Text(user.passwordError)
                            .foregroundColor(.red)
                            .italic()
                    }
                } else {
                    NavigationLink("Change Password", destination: ChangePasswordView())
                }
            }
            
            Section(header: Text("About Me")) {
                TextEditor(text: $user.shortBiography)
                if keyboardObserver.keyboardActive {
...
                    .centered()
                }
            }
            
            Section(header: Text("Fitness Data")) {
                
                Picker("Choose Sex", selection: $user.sex) {
                    ForEach(Sex.allCases.indices) {
                        Text(Sex.allCases[$0].rawValue)
                            .tag(Sex.allCases[$0])
                    }
                }
                
...
                        .centered()
                    Text("Register User")
                        .font(.title2)
                        .italic()
                        .foregroundColor(.gray)
                        .centered()
                    Button("Complete User Registration", action: user.attemptToRegister)
                } else {
                    Button("Complete User Update", action: user.attemptToUpdate)
                }
                if !user.userRegistered {
                    Button("Cancel User Registration", action: {keepFitAppController.currentView = .entry})
                        .foregroundColor(.red)
                } else {
                    Button("Destroy User", action: {user.destroyingUser = true})
...
