...
                            .autocapitalization(.none)
                            .disableAutocorrection(true)
                        SecureField("Password", text: $entryViewController.password)
                        Button(action:
                                self.entryViewController.attemptLogin
                        ) {
                            Text("Login")
                        }
                    }
                    .frame(width: proxy.size.width*0.6, alignment: .center)
                    Spacer()
                    NavigationLink(destination: UserProfileView(user: User.currentUser)) {
                        Label("Register New User", systemImage: "person.fill.badge.plus")
                    }
//                    Button(action: entryViewController.startRegisteringNewUser) {
//                        Label("Register New User", systemImage: "person.fill.badge.plus")
//                    }
                    Spacer()
                }
...
